--- a/Paper/setup/packages.tex
+++ b/Paper/setup/packages.tex
@@ -11,7 +11,13 @@
 \usepackage{fixltx2e}
 \usepackage{stfloats}
 
+% = = = Compact Bibliography
+\usepackage{bibspacing}
+\setlength{\bibspacing}{\baselineskip}
+
 % NOTE: IEEE does not allow algorithm2e
+
+
 
 %------------------------Packages----------------------%
 
