some modifications on browser extentions and youtube incident, fix citations

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -313,3 +313,11 @@
 	Note = {Accessed: 2018-01-20},
 	Title = {Cryptojacking malware Coinhive found on 30,000+ websites},
 	Year = {2017}}
+
+
+@misc{trendmicrocoinhive,
+	Author = {Trend Micro},
+	Howpublished = {\url{https://blog.trendmicro.com/trendlabs-security-intelligence/malvertising-campaign-abuses-googles-doubleclick-to-deliver-cryptocurrency-miners/}},
+	Note = {Accessed: 2018-01-31},
+	Title = {Malvertising Campaign Abuses Google’s DoubleClick to Deliver Cryptocurrency Miners},
+	Year = {2018}}
