--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -19,12 +19,12 @@ A website administrator can add a mining script to her webpage, with or without 
 
 \subsection{Mixed content} 
 
-Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America \url{http://globovision.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}. Another high-profile cryptojacking case involving a Google platform occured in January 2018. Trend Micro researchers found advertisesments cointaining Coinhive were shown to YouTube users in Japan, France, Taiwan, Italy, and Spain for nearly a week. (CITE: https://blog.trendmicro.com/trendlabs-security-intelligence/malvertising-campaign-abuses-googles-doubleclick-to-deliver-cryptocurrency-miners/). However, a Google representative speaking to Ars Technica stated, "In this case, the ads were blocked in less than two hours and the malicious actors were quickly removed from our platforms." (CITE: https://arstechnica.com/information-technology/2018/01/now-even-youtube-serves-ads-with-cpu-draining-cryptocurrency-miners/) Similar to Showtime, YouTube inherently has a high average visit duration as a video streaming site and thus is prime target for cryptojacking operations.
+Many websites serve active Javascript from third parties within their own webpages. This could be ads from an ad network or tools for tracing users of their site. Third parties with these privileges can inject cryptojacking scripts into the sites that use them. In two separate incidents, Coinhive was injected into the websites of Movistar\footnote{Movistar is a major telecommunications brand owned by Telefonica, operating in Spain and in many Hispanic American countries \url{https://www.movistar.com/}} and Globovision\footnote{Globovision is a 24-hour television news network in Venezuela and Latin America \url{http://globovision.com/}} using Google Tag Manager\footnote{Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites}. Movistar stated that Coinhive was not put on their website by a hacker, but instead was due to \textit{``internal error''} while they were conducting ``production tests.'' No statement was provided by Globovision on why the cryptojacking scripts appeared on their site on November 15, 2017~\cite{googletagcoinhive}. Another high-profile cryptojacking case involving a Google platform occurred in January 2018 when Trend Micro researchers found advertisements containing Coinhive miner script were shown to YouTube users in Japan, France, Taiwan, Italy, and Spain for nearly a week~\cite{trendmicrocoinhive}. Similar to Showtime, YouTube inherently has a high average visit duration as a video streaming site and thus is prime target for cryptojacking operations.
 
 
 \subsection{Browser extensions} 
 
-Cryptojacking was not limited to websites in 2017. The Chrome extension Archive Poster remained on the Chrome Web Store for days while silently cryptojacking an unknown portion of their 100,000+ users. After multiple user reports, followed by multiple news media outlets covering the issue, the extension was removed~\cite{chromeextentioncoinhive}. 
+Cryptojacking was not limited to websites in 2017. The Chrome extension Archive Poster remained on the Chrome Web Store for days while silently cryptojacking an unknown portion of their 100,000+ users. After multiple user reports, followed by multiple news media outlets covering the issue, the extension was removed~\cite{chromeextentioncoinhive}. Similar cryptojacking extensions has been identified on less popular Mozilla Firefox add-ons as well. 
 
 \subsection{Breaches} 
 
