deanonymize the paper

--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -12,7 +12,11 @@
 
 \begin{document}
 \title{A first look at browser-based cryptojacking}
-\author{}
+
+\input{sections/authors}
+
+
+
 \maketitle
 
 %====================================================================
