updates on recent incidents

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -50,6 +50,15 @@
 	Title = {Bitcoin: A peer-to-peer electronic cash system},
 	Year = {2008}}
 
+@inproceedings{kumar2017traceability,
+  title={A traceability analysis of monero’s blockchain},
+  author={Kumar, Amrit and Fischer, Cl{\'e}ment and Tople, Shruti and Saxena, Prateek},
+  booktitle={European Symposium on Research in Computer Security},
+  pages={153--173},
+  year={2017},
+  organization={Springer}
+}
+
 @misc{monero,
 	Author = {Monero},
 	Howpublished = {\url{https://getmonero.org/}},
@@ -287,7 +296,7 @@
 	Year = {2018}}
 
 @misc{registershowtime,
-	Author = {theregister},
+	Author = {theRegister},
 	Howpublished = {\url{https://www.theregister.co.uk/2017/09/25/showtime_hit_with_coinmining_script/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {CBS's Showtime caught mining crypto-coins in viewers' web browsers},
@@ -301,12 +310,35 @@
 	Year = {2015}}
 
 @misc{malwarebytescoinhive,
-	Author = {malwarebytes},
+	Author = {Malwarebytes},
 	Howpublished = {\url{https://blog.malwarebytes.com/cybercrime/2017/11/persistent-drive-by-cryptomining-coming-to-a-browser-near-you/}},
 	Note = {Accessed: 2018-01-20},
 	Title = {Persistent drive-by cryptomining coming to a browser near you},
 	Year = {2017}}
 
+
+@misc{gaurdianukgovern,
+	Author = {TheGuardian},
+	Howpublished = {\url{https://www.theguardian.com/technology/2018/feb/11/government-websites-hit-by-cryptocurrency-mining-malware}},
+	Note = {Accessed: 2018-02-28},
+	Title = {Government websites hit by cryptocurrency mining malware},
+	Year = {2018}}
+	
+	
+@misc{theregisterukgovern,
+	Author = {TheRegister},
+	Howpublished = {\url{https://www.theregister.co.uk/2018/02/11/browsealoud_compromised_coinhive/}},
+	Note = {Accessed: 2018-02-28},
+	Title = {UK ICO, USCourts.gov... Thousands of websites hijacked by hidden crypto-mining code after popular plugin pwned},
+	Year = {2018}}
+	
+@misc{nakedsecurityLatimes,
+	Author = {NakedSecurity},
+	Howpublished = {\url{https://nakedsecurity.sophos.com/2018/02/27/unsecured-aws-led-to-cryptojacking-attack-on-la-times/}},
+	Note = {Accessed: 2018-02-28},
+	Title = {Unsecured AWS led to cryptojacking attack on LA Times},
+	Year = {2018}}
+	
 @misc{badpacketspublicwww,
 	Author = {Troy Mursch},
 	Howpublished = {\url{https://badpackets.net/cryptojacking-malware-coinhive-found-on-30000-websites/}},
