--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -10,13 +10,15 @@
 \rule{\linewidth}{1pt}
 \ytl{2013-10-13}{Monero Cryptocurrency appeared}
 \ytl{2017-09-14}{Coinhive Miner launched}
-\ytl{2017-09-17}{ThePirateBay caught using coinhive}
+\ytl{2017-09-17}{ThePirateBay caught using coinhive\cite{gaurdianelectricity}}
 \ytl{2017-09-21}{Adblockers started to block coinhive scripts}
-\ytl{2017-09-24}{Showtime caught running coinhive}
+\ytl{2017-09-24}{Showtime caught running coinhive\cite{showtimehive}}
 \ytl{2017-09-25}{Coinhive clones started to appear}
-\ytl{2017-10-13}{PolitiFact website compromised to run Coinhive}
+\ytl{2017-10-13}{PolitiFact website compromised\cite{politifactcoinhive}}
 \ytl{2017-10-16}{Coinhive launched authedmine - authorized mining}
-\ytl{2017-11-23}{LiveHelpNow Hack incident}
+\ytl{2017-11-23}{LiveHelpNow Hack incident\cite{chatsupporthack}}
+%HERE ADD MORE
+\ytl{2018-02-11}{UK Information Commissioner\'s Office incident\cite{theregisterukgovern}}
  
 % Needs to be completed.
 \bigskip
