Fixing author block from MIA

--- a/Paper/sections/authors.tex
+++ b/Paper/sections/authors.tex
@@ -21,11 +21,11 @@
 %}
 %
 
-\author{%
-Shayan Eskandari\textsuperscript{1}, Andreas Leoutsarakos\textsuperscript{1}, 
-Troy Mursch\textsuperscript{2}, Jeremy Clark\textsuperscript{1}\\ \\
-1 Concordia University \\
-2 Bad Packets Report
-}
+%\author{%
+%Shayan Eskandari\textsuperscript{1}, Andreas Leoutsarakos\textsuperscript{1}, 
+%Troy Mursch\textsuperscript{2}, Jeremy Clark\textsuperscript{1}\\ \\
+%1 Concordia University \\
+%2 Bad Packets Report
+%}
 
 
