--- a/Paper/setup/packages.tex
+++ b/Paper/setup/packages.tex
@@ -14,7 +14,7 @@
 % = = = Compact Bibliography
 \usepackage{bibspacing}
 \setlength{\bibspacing}{\baselineskip}
-\usepackage{authblk}
+%\usepackage{authblk}
 % NOTE: IEEE does not allow algorithm2e
 
 
